# hub.rs

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml
.github/workflows/: ci.yml
crates/hub-backend/: Cargo.toml  README.md
crates/hub-backend/src/: accounts.rs  backend.rs  code.rs  config.rs  error.rs  lib.rs  module_state.rs  partition.rs  storage.rs  types.rs
crates/hub-cli/: Cargo.toml  README.md
crates/hub-cli/src/: backtrace.rs  lib.rs  sigsegv.rs
crates/hub-client/: Cargo.toml
crates/hub-client/src/: bearer.rs  bls_signer.rs  client.rs  document_acp.rs  error.rs  lib.rs  signer.rs  subject.rs  types.rs
crates/hub-client/src/native_tx/: acp.rs  bulletin.rs  hub.rs  mod.rs
crates/hub-client/src/query/: acp.rs  bulletin.rs  hub.rs  mod.rs
crates/hub-client/src/tx/: acp.rs  bulletin.rs  hub.rs  mod.rs
crates/hub-config/: Cargo.toml  README.md
crates/hub-config/src/: consensus.rs  error.rs  execution.rs  lib.rs  network.rs  node.rs  rpc.rs
crates/hub-consensus/: Cargo.toml  README.md
crates/hub-consensus/src/: application.rs  error.rs  execution.rs  ledger.rs  lib.rs  proposal.rs  traits.rs
crates/hub-consensus/src/components/: mempool.rs  mod.rs  seed.rs  snapshot.rs
crates/hub-crypto/: Cargo.toml  README.md
crates/hub-crypto/src/: bls.rs  jwt.rs  lib.rs  secp256k1.rs  test_utils.rs
crates/hub-domain/: Cargo.toml  README.md
crates/hub-domain/src/: aliases.rs  block.rs  bootstrap.rs  commitment.rs  events.rs  evm.rs  gossip.rs  idents.rs  lib.rs  light_block.rs  native_tx.rs  proof.rs  tx.rs
crates/hub-e2e/: Cargo.toml  README.md
crates/hub-e2e/src/: lib.rs
crates/hub-e2e/src/cluster/: genesis.rs  health.rs  keys.rs  mod.rs  node_config.rs  test_cluster.rs
crates/hub-e2e/src/contracts/: caller.rs  deployer.rs  mod.rs  rpc.rs  signer.rs
crates/hub-e2e/src/observe/: assertions.rs  cluster_state.rs  events.rs  log_tracker.rs  mod.rs  rpc_events.rs  rpc_poller.rs  rpc_snapshot.rs
crates/hub-e2e/tests/: acp_create_policy.rs  contract_deploy.rs  core_chain.rs  cross_object_acp.rs  gossip_headers.rs  hub_e2e_canonical.rs  light_client.rs  node_restart.rs  validator_bootstrap.rs  validator_epoch_transition.rs
crates/hub-executor/: Cargo.toml
crates/hub-executor/src/: adapter.rs  config.rs  context.rs  error.rs  executor.rs  lib.rs  mempool.rs  outcome.rs  revm.rs  simulate.rs  traits.rs  validation.rs
crates/hub-executor/src/precompiles/: acp.rs  bulletin.rs  hub.rs  mod.rs  validator_registry.rs
crates/hub-executor/tests/: executor.rs
crates/hub-genesis/: Cargo.toml
crates/hub-genesis/src/: config.rs  lib.rs
crates/hub-handlers/: Cargo.toml  README.md
crates/hub-handlers/src/: adapter.rs  error.rs  lib.rs  qmdb.rs  state.rs
crates/hub-indexer/: Cargo.toml  README.md
crates/hub-indexer/src/: error.rs  filter.rs  lib.rs  light_block_store.rs  store.rs  types.rs
crates/hub-jsonrpc/: Cargo.toml  README.md
crates/hub-jsonrpc/src/: config.rs  error.rs  eth.rs  eth_subscribe.rs  hub_api.rs  indexed_provider.rs  lib.rs  server.rs  state.rs  state_provider.rs  types.rs
crates/hub-ledger/: Cargo.toml  README.md
crates/hub-ledger/src/: lib.rs
crates/hub-marshal/: Cargo.toml  README.md
crates/hub-marshal/src/: actor.rs  archive.rs  broadcast.rs  lib.rs  peers.rs
crates/hub-marshal/tests/: integration.rs
crates/hub-marshal/tests/common/: mod.rs
crates/hub-modules/: Cargo.toml
crates/hub-modules/src/: borsh_did.rs  key_encoding.rs  kv_store.rs  lib.rs  module_state.rs  types.rs
crates/hub-modules/src/acp/: abi.rs  error.rs  keys.rs  mod.rs  types.rs  zanzibar_store.rs
crates/hub-modules/src/bulletin/: abi.rs  error.rs  keys.rs  mod.rs  types.rs
crates/hub-modules/src/hub/: abi.rs  error.rs  keys.rs  mod.rs  types.rs
crates/hub-modules/src/native_account/: keys.rs  mod.rs
crates/hub-modules/src/validator_registry/: abi.rs  error.rs  mod.rs  types.rs
crates/hub-overlay/: Cargo.toml  README.md
crates/hub-overlay/src/: lib.rs  overlay.rs
crates/hub-qmdb/: Cargo.toml  README.md
crates/hub-qmdb-ledger/: Cargo.toml  README.md
crates/hub-qmdb-ledger/src/: ledger.rs  lib.rs
crates/hub-qmdb/src/: batch.rs  changes.rs  encoding.rs  error.rs  lib.rs  root.rs  store.rs  traits.rs
crates/hub-reporters/: Cargo.toml  README.md
crates/hub-reporters/src/: lib.rs  validator_set.rs
crates/hub-runner/: Cargo.toml
crates/hub-runner/src/: app.rs  epoch_manager.rs  error.rs  lib.rs  production_runner.rs  runner.rs  scheme.rs  scheme_provider.rs  tx_forward.rs
crates/hub-service/: Cargo.toml  README.md
crates/hub-service/src/: lib.rs  runner.rs  service.rs  stubs.rs  traits.rs  transport_provider.rs
crates/hub-simplex/: Cargo.toml  README.md
crates/hub-simplex/src/: config.rs  engine.rs  lib.rs  pool.rs  quota.rs
crates/hub-state/: Cargo.toml
crates/hub-state/src/: lib.rs  store.rs  tree.rs
crates/hub-traits/: Cargo.toml  README.md
crates/hub-traits/src/: error.rs  lib.rs  state.rs
crates/hub-transport/: Cargo.toml  README.md
crates/hub-transport/src/: builder.rs  bundle.rs  channels.rs  config.rs  error.rs  ext.rs  lib.rs  network_provider.rs  provider.rs  transport.rs
docs/superpowers/specs/: 2026-06-19-structured-cross-object-subjects-design.md
testdata/: genesis.json
