[package]
name = "hub-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust client library for hub (EVM + BLS transaction paths)"

[lints]
workspace = true

[dependencies]
hub-crypto.workspace = true
hub-domain.workspace = true
hub-modules.workspace = true

alloy-consensus = { workspace = true, features = ["k256"] }
alloy-eips.workspace = true
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-signer.workspace = true
alloy-signer-local = { workspace = true, default-features = false }
alloy-sol-types.workspace = true
k256.workspace = true

ark-bls12-381.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
rand.workspace = true

reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["net"] }
hex.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
ark-std.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
