[package]
name = "hub-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Consensus application layer for hub"

[dependencies]
# Local crates
hub-config.workspace = true
hub-domain.workspace = true
hub-executor.workspace = true
hub-qmdb.workspace = true
hub-traits.workspace = true

# Alloy
alloy-primitives.workspace = true
alloy-consensus.workspace = true

# Commonware
commonware-cryptography.workspace = true

# Synchronization
parking_lot.workspace = true

# Error handling
thiserror.workspace = true

# Async
futures.workspace = true

[dev-dependencies]
rstest.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
