[package]
name = "hub-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cryptographic utilities for hub"

[lints]
workspace = true

[features]
default = []
test-utils = [
    "dep:anyhow",
    "dep:commonware-consensus",
    "dep:commonware-cryptography",
    "dep:commonware-utils",
    "dep:hub-domain",
]

[dependencies]
# Arkworks BLS (match orbis-rs versions)
ark-bls12-381.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
sha2.workspace = true

# DID derivation
multibase.workspace = true
unsigned-varint.workspace = true

# secp256k1 DID recovery
alloy-primitives.workspace = true
k256.workspace = true

# Error handling
thiserror.workspace = true

# Optional (test-utils feature)
anyhow = { workspace = true, optional = true }
commonware-consensus = { workspace = true, optional = true }
commonware-cryptography = { workspace = true, optional = true }
commonware-utils = { workspace = true, optional = true }
hub-domain = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

[dev-dependencies]
ark-std.workspace = true
hex.workspace = true
