[package]
name = "hub-e2e"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "End-to-end test harness for hub"

[dependencies]
hub-genesis.workspace = true
hub-runner.workspace = true

hub-config.workspace = true
hub-crypto.workspace = true

commonware-codec.workspace = true
commonware-cryptography.workspace = true

alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true

eyre.workspace = true
hex.workspace = true
libc.workspace = true
parking_lot.workspace = true
rand.workspace = true
regex = "1"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

[dev-dependencies]
alloy-sol-types.workspace = true
hub-client.workspace = true
hub-modules.workspace = true
tempfile.workspace = true
toml = "0.8"
tokio = { workspace = true, features = ["full", "test-util"] }

[lints]
workspace = true
