[package]
name = "hub-e2e"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "End-to-end test harness for hub"

[dependencies]
hub-harness = { git = "ssh://git@github.com/sourcenetwork/backbone.git" }

[dev-dependencies]
acp = { workspace = true, default-features = false }
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
hex.workspace = true
hub-client.workspace = true
hub-domain.workspace = true
hub-crypto.workspace = true
hub-modules.workspace = true
identity.workspace = true
k256.workspace = true
jsonrpsee.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }

[lints]
workspace = true
