[package]
name = "hub-executor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Block execution abstractions, REVM implementation, and hub precompiles"

[dependencies]
hub-crypto.workspace = true
hub-domain.workspace = true
hub-modules.workspace = true
hub-state.workspace = true
hub-overlay.workspace = true
hub-traits.workspace = true
hub-qmdb.workspace = true

acp.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-sol-types.workspace = true
futures.workspace = true
hex.workspace = true
identity.workspace = true
revm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt"] }
tracing.workspace = true

[dev-dependencies]
alloy-consensus.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
ark-bls12-381.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
rstest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
