[package]
name = "hub-genesis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Extended genesis configuration for hub"

[dependencies]
hub-domain.workspace = true

alloy-evm.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
