[package]
name = "hub-ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Ledger services for hub nodes"

[lints]
workspace = true

[dependencies]
# Local crates
hub-consensus.workspace = true
hub-domain.workspace = true
hub-executor.workspace = true
hub-modules.workspace = true
hub-overlay.workspace = true
hub-qmdb-ledger.workspace = true
hub-traits.workspace = true

# Commonware
commonware-cryptography.workspace = true
commonware-runtime.workspace = true

# Alloy
alloy-primitives.workspace = true

# Async
futures.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
# Commonware
commonware-runtime.workspace = true
commonware-utils.workspace = true

# Execution
alloy-evm = { workspace = true, features = ["std"] }
alloy-consensus.workspace = true

# Crypto
k256.workspace = true
