[package]
name = "hub-modules"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Hub module implementations (ACP, Bulletin, Hub)"

[dependencies]
acp.workspace = true
hub-crypto.workspace = true
identity.workspace = true
zanzibar.workspace = true

alloy-sol-types.workspace = true
alloy-primitives.workspace = true
async-trait.workspace = true
borsh.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
futures.workspace = true

[lints]
workspace = true
