[package]
name = "hub-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "JMT-backed module state trees with RocksDB persistence"

[dependencies]
jmt = { version = "0.11", features = ["migration"] }
rocksdb = "0.22"
sha2 = { workspace = true }
borsh = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
